* ADDED IN Panel: function open()
* ADDED IN Panel: function close()
* ADDED IN Panel: property int hideTimeout
* DEPRECATED IN Panel: writable property opened. Will be made read-only.
* ADDED IN: Empty: property bool waitingConfirmationForRemoval
* ADDED IN: Empty: function cancelItemRemoval()
* CHANGED in CrossFadeImage: readonly property size sourceSize TO property size sourceSize

Compatibility Breaks
********************

- CHANGED IN Tabs: Automatically show the header when the title of the active tab changes
- CHANGED IN Page/MainView: Only enable auto-hide behavior of header when the Page's flickable can be flicked vertically, so that manual setting of anchors is no longer needed for flickables that only flick horizontally
- CHANGED IN Page: Automatic detection of flickable inside a Page to control the header is now limited to Flickables that are anchored to the top of the Page or fill the Page. Header automatically shows when flickable.contentHeight becomes <= flickable.height.
- CHANGED IN Action, ActionItem, OptionSelectorDelegate: Setting iconName now always selects the requested icon from ubuntu-mobile theme, not the system icon theme.
- CHANGED IN TabBar: The model now needs to have a selectedIndex property.

SDK 0.1.46
##########

API Changes
***********

* None

Compatibility Breaks
********************

* None

SDK 0.1.45
##########

API Changes
***********

* None

Compatibility Breaks
********************

* None

SDK 0.1.44
##########

API Changes
***********

* CHANGED IN AbstractButton: signal clicked(mouse) TO signal clicked()
* CHANGED IN AbstractButton: signal pressAndHold(mouse) TO signal pressAndHold()

Compatibility Breaks
********************

* CHANGED IN Tabs: Swiping to switch tabs disabled by default

SDK 0.1.43
##########

(Automatic builds)

SDK 0.1.42
##########

Compatibility Breaks
********************

* None

API Changes
***********

* Style QML type as base type for all custom style objects